--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-deap==1.0.2
+appdirs==1.4.3
+classifyintents==0.5.1
+deap==1.0.1
 numpy==1.11.2
+packaging==16.8
 pandas==0.19.1
+pyparsing==2.2.0
 python-dateutil==2.5.3
 pytz==2016.7
 requests==2.11.1
@@ -9,4 +13,3 @@ scipy==0.18.1
 six==1.10.0
 tqdm==4.9.0
 update-checker==0.12
-git+git://github.com/ukgovdatascience/classifyintents.git@master
