Minor fixes for using smartsurvey data
* Update README.md
* Add reformat.R as a temporary fix for reformatting data in the new
format.
* predictor.py previously expected to load files with a messy column
name format. Since all the cleaning now goes on in reformat.R, this we
don't need to worry about messy formats in predictor.py anymore.
* Change the version of classifyintent that is used. This version will
be merged to master, but needs to have its failing tests fixed first.

All these measures are stop gaps. In future this pipeline will not make
any use of flat files, and will instead depend on a postgres backend.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 appdirs==1.4.3
-classifyintents==0.5.1
+git+git://github.com/ukgovdatascience/classifyintents.git@7a3bda943681e3eb272f2cd42b7c19a79a06742d
 deap==1.0.1
 numpy==1.11.2
 packaging==16.8
