--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,9 @@
 *.pyc
 .DS_Store
 __pycache__
-Icon
+Icon
 
 # Data files
-
 *.pkl
 *.csv
 *.gsheet
@@ -19,3 +18,6 @@ pip-selfcheck.json
 share
 .env
 .Rproj.user
+packrat/lib*/
+.ipynb_checkpoints
+.env
