--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,15 @@ sudo: false
 git:
     depth: 3
 python:
-    - "3.5"
-    - "3.6"
-# command to install dependencies
+    - 3.5
+    - 3.6
+
 install:
-    #- pip install numpy
-    #- pip install scipy
     - pip install -r requirements.txt
-    - pip install codecov
+    - pip install pytest pytest-cov codecov
 
 script: 
-    - python -m unittest urllookup/test_urllookup.py
+    - py.test -v --cov=./
 
 after_success:
     - codecov
