--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
     - 3.6
 
 install:
-    - pip install numpy pandas
+#    - pip install numpy pandas
     - pip install -r requirements.txt
     - pip install pytest pytest-cov codecov
 
