--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,16 @@ appdirs==1.4.3
 git+git://github.com/ukgovdatascience/classifyintents.git
 git+git://github.com/ukgovdatascience/scrubadub.git
 deap==1.0.1
-numpy==1.11.2
+numpy==1.13.1
 packaging==16.8
-pandas==0.19.1
+pandas==0.20.3
 pyparsing==2.2.0
 python-dateutil==2.5.3
 pytz==2016.7
 requests==2.11.1
-scipy==0.18.1
-scikit-learn==0.18
+scipy==0.19.1
+scikit-learn[alldeps]
 six==1.10.0
 tqdm==4.9.0
 update-checker==0.12
+SQLAlchemy==1.1.11
