Begin training simple models
* Add support for nbstripout to remove ipynb states.

--- a/python/logging.conf
+++ b/python/logging.conf
@@ -27,7 +27,7 @@ args=(sys.stdout, )
 class=FileHandler
 level=DEBUG
 formatter=pipelineFormatter
-args=('sklearn_pipeline.log', )
+args=('/tmp/sklearn_pipeline.log', )
 
 [formatter_pipelineFormatter]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
