--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 appdirs==1.4.3
-git+git://github.com/dmlc/xgboost.git
+#git+git://github.com/dmlc/xgboost.git
 git+git://github.com/viisar/brew.git
 git+git://github.com/ukgovdatascience/classifyintents.git
 git+git://github.com/ukgovdatascience/scrubadub.git
@@ -21,3 +21,4 @@ tensorflow==1.3.0
 jupyter==1.0.0
 matplotlib==2.0.2
 #xgboost==0.6a2
+psycopg2==2.7.3.2
