--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 appdirs==1.4.3
-git+git://github.com/ukgovdatascience/classifyintents.git
+git+https://github.com/ukgovdatascience/classifyintents.git
 git+git://github.com/ukgovdatascience/scrubadub.git
+git+git://github.com/ukgovdatascience/govukurllookup.git
 deap==1.0.1
 numpy==1.11.2
 packaging==16.8
@@ -9,8 +10,8 @@ pyparsing==2.2.0
 python-dateutil==2.5.3
 pytz==2016.7
 requests==2.11.1
-scikit-learn==0.18
 scipy==0.18.1
+scikit-learn==0.18
 six==1.10.0
 tqdm==4.9.0
 update-checker==0.12
